paragraph is added

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sample</title>
-</head>
-<body>
+  </head>
+  <body>
     <h2>This is my first Project</h2>
-</body>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere
+      molestias, aliquid, in rerum eaque veritatis saepe autem odio dolores
+      voluptatibus, magnam eum velit hic neque.
+    </p>
+  </body>
 </html>
