--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
       molestias, aliquid, in rerum eaque veritatis saepe autem odio dolores
       voluptatibus, magnam eum velit hic neque.
     </p>
+
+    <footer>Contact us</footer>
   </body>
 </html>
